blockEm more optimised with background worker - ready for publishing

--- a/editor.html
+++ b/editor.html
@@ -10,6 +10,8 @@
         <div class="text-box">
             <h1>Block Em</h1>
             <h3>Redirect your addictive urls to productive ones</h3>
+            <br />
+            <h3>Gotta block em all !!</h3>
         </div>
     </header>
     <div class="url-box">
